# nonebot-plugin-learning-chat

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_learning_chat/: __init__.py  config.py  genshin_word.txt  handler.py  models.py  web_api.py  web_page.py
